# hotel_import

./: .gitignore  Cargo.toml  Migrant.toml  README.md
dbcon/: Cargo.toml
dbcon/src/: lib.rs
fspec/: Cargo.toml
fspec/src/: downloader.rs  file_spec.rs  lib.rs  main.rs
migrations/20181124053838_download-register/: down.sql  up.sql
src/: main.rs
