[package]
name = "fspec"
version = "0.1.0"
authors = ["Joshua Bowles <jbowayles@gmail.com>"]

[dependencies]
chrono = "0.4"
dbcon = {path="../dbcon"}
postgres = {version = "0.15", features = ["with-chrono"]}
hyper = "0.12.16"
futures-cpupool = "0.1.8"
pretty_env_logger = "0.2.5"
futures = "0.1.25"
hyper-rustls = "0.15.0"
reqwest = "0.9.11"
failure = "0.1.5"